Voted Quorum tests